font size adjustments

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,6 +4,7 @@
     <div class="details-header">
       <h1>Bruno Omizu</h1>
       <p>Solutions Architect | Technical Lead</p>
+      <p>New Zealand Permanent Resident</p>
     </div>
     <div class="details-contact">
       <div>
@@ -11,17 +12,17 @@
         <p>000 222 8877</p>
       </div>
       <div>
-        <h4>Email</h4>
+        <h4><strong>Email</strong></h4>
         <p>test@test.com</p>
       </div>
       <div>
-        <h4>Address</h4>
+        <h4><strong>Address</strong></h4>
         <p>19/8 TEST TEST</p>
         <p>TEST</p>
         <p>TEST</p>
       </div>
       <div>
-        <h4>Date of Birth</h4>
+        <h4><strong>Date of Birth</strong></h4>
         <p>November 12th, 1985</p>
       </div>
     </div>
