--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -30,7 +30,7 @@ img {
   margin-right: auto;
   height: 350px;
   width: 348px;
-  background-color: honeydew;
+  background-color: white;
   font-size: 14px;
   padding-left: 15px;
   border: 1px solid black;
@@ -63,7 +63,6 @@ img {
   height: auto;
   position: relative;
   overflow: hidden;
-  background-color: aliceblue;
 }
 
 .flex-container-social-box {
@@ -88,8 +87,8 @@ img {
   justify-content: center;
   margin: 5px;
   padding: 5px;
-  height: 32px;
-  width: 32px;
+  height: 42px;
+  width: 42px;
 }
 
 .flex-container-intro {
@@ -99,7 +98,6 @@ img {
   height: auto;
   position: relative;
   overflow: hidden;
-  background-color: aliceblue;
 }
 
 .flex-container-intro-box {
@@ -112,7 +110,6 @@ img {
   margin: 50px;
   margin-left: auto;
   margin-right: auto;
-  background-color: aliceblue;
   width: 675px;
   padding: 20px;
   line-height: 1.5em;
