--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   vertical-align: middle;
   line-height: 100px;
-  background-color: yellowgreen;
+  background-color: gainsboro;
   width: 100%;
   height: 100px;
   margin-top: 20px;
@@ -12,7 +12,7 @@
 }
 
 .flex-container-education-header h3 {
-  background-color: yellowgreen;
+  background-color: gainsboro;
   width: 100%;
   height: 100px;
   margin: auto;
