--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="topnav">
+<div id="home" class="topnav">
   <div class="home"><a href="#home">Bruno Omizu</a></div>
   <a href="#contact">Contact</a>
   <a href="#skills">Skills</a>
