--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div id="home" class="topnav">
-  <div class="home"><a href="#home">Bruno Omizu</a></div>
+  <div class="home"><a href="#home" (click)="gotoTop()">Bruno Omizu</a></div>
   <a href="#contact">Contact</a>
   <a href="#skills">Skills</a>
   <a href="#education">Education</a>
