--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,6 @@
   <div class="home"><a href="#home" (click)="gotoTop()">Bruno Omizu</a></div>
   <a href="#contact">Contact</a>
   <a href="#skills">Skills</a>
-  <a href="#education">Education</a>
-  <a href="#experience">Experience</a>
+  <a href="#education" (click)="scroll('education')">Education</a>
+  <a href="#experience" (click)="scroll('experience')">Experience</a>
 </div>
