added husky, resize p-card and moved images to assets/images

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,3 +1,7 @@
 <div id="education" class="flex-container-education-header">
   <h3>EDUCATION</h3>
 </div>
+
+<div class="flex-container-experience-box">
+  <p-card></p-card>
+</div>
