--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -18,3 +18,12 @@
   height: 100px;
   margin: auto;
 }
+
+.flex-container-experience-box {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
