--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -18,3 +18,9 @@
   height: 100px;
   margin: auto;
 }
+
+.flex-container-experience-box {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
