--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container-main">
-  <div class="image"><img src="assets/bruno.jpg" alt="" /></div>
+  <div class="image"><img src="assets/images/bruno.jpg" alt="" /></div>
   <div class="details">
     <div class="details-header">
       <h1>Bruno Omizu</h1>
@@ -32,17 +32,17 @@
   <div class="flex-container-social-box">
     <div class="flex-container-social-item">
       <a href="https://www.linkedin.com/in/brunomizu/"
-        ><img src="assets/linkedin.svg" alt="LinkedIn"
+        ><img src="assets/images/linkedin.svg" alt="LinkedIn"
       /></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://github.com/brnomz/my-digital-cv"
-        ><img src="assets/github.svg" alt="GitHub"
+        ><img src="assets/images/github.svg" alt="GitHub"
       /></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://www.instagram.com/brunomizu/"
-        ><img src="assets/instagram.svg" alt="Instagram"
+        ><img src="assets/images/instagram.svg" alt="Instagram"
       /></a>
     </div>
   </div>
