--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -2,6 +2,24 @@
   <h3>EDUCATION</h3>
 </div>
 
-<div class="flex-container-experience-box">
-  <p-card></p-card>
+<div class="flex-container-education-box">
+  <p-card
+    header="Santa Cecilia University"
+    subheader="Bachelor of Computer Science"
+    [style]="{ width: '48%', 'margin-left': 'auto', 'margin-right': 'auto' }"
+    styleClass="p-card-shadow"
+  >
+    <ng-template pTemplate="header">
+      <a href="https://unisanta.br"
+        ><img
+          alt="Santa Cecilia University (2003-2007)"
+          src="assets/images/university.png"
+          style="width: 15%"
+      /></a>
+    </ng-template>
+    <p>
+      Relevant Modules: Algorithmics, Systems Programming, Professional Software
+      Development, Advanced Networks and Operating Systems
+    </p>
+  </p-card>
 </div>
