--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -22,14 +22,14 @@
               [alt]="event.company"
               [src]="event.image"
               style="
-                width: 20%;
-                margin-left: 3%;
-                margin-top: 3%;
-                margin-right: 3%;
+                width: 25%;
+                margin-left: 2%;
+                margin-top: 2%;
+                margin-right: 2%;
               "
           /></a>
         </ng-template>
-        <p>{{ event.description }}</p>
+        <p style="text-align: 'left'">{{ event.description }}</p>
       </p-card>
     </ng-template>
   </p-timeline>
