--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -33,7 +33,7 @@ img {
   background-color: white;
   font-size: 14px;
   padding-left: 15px;
-  border: 1px solid black;
+  border: 1px solid lightgrey;
 }
 
 .details-header h1 {
