move css rules to global

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,4 +1,4 @@
-<div id="education" class="flex-container-education-header">
+<div id="education" class="flex-container-header">
   <h3>EDUCATION</h3>
 </div>
 
