--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div id="experience" class="flex-container-experience-header">
+<div id="experience" class="flex-container-header">
   <h3>EXPERIENCE</h3>
 </div>
 
