use primeicons instead of static assets

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,9 @@
 <div id="home" class="topnav">
-  <div class="home"><a href="#home" (click)="gotoTop()">Bruno Omizu</a></div>
+  <div class="home">
+    <a href="#home" (click)="gotoTop()"
+      ><i class="pi pi-home" style="font-size: 24px; color: white"></i
+    ></a>
+  </div>
   <a href="#contact">Contact</a>
   <a href="#skills">Skills</a>
   <a href="#education" (click)="scroll('education')">Education</a>
