--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -32,18 +32,23 @@
   <div class="flex-container-social-box">
     <div class="flex-container-social-item">
       <a href="https://www.linkedin.com/in/brunomizu/"
-        ><img src="assets/images/linkedin.svg" alt="LinkedIn"
-      /></a>
+        ><i class="pi pi-linkedin" style="font-size: 24px; color: black"></i
+      ></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://github.com/brnomz/my-digital-cv"
-        ><img src="assets/images/github.svg" alt="GitHub"
-      /></a>
+        ><i class="pi pi-facebook" style="font-size: 24px; color: black"></i
+      ></a>
+    </div>
+    <div class="flex-container-social-item">
+      <a href="https://github.com/brnomz/my-digital-cv"
+        ><i class="pi pi-github" style="font-size: 24px; color: black"></i
+      ></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://www.instagram.com/brunomizu/"
-        ><img src="assets/images/instagram.svg" alt="Instagram"
-      /></a>
+        ><i class="pi pi-instagram" style="font-size: 24px; color: black"></i
+      ></a>
     </div>
   </div>
 </div>
