change facebook url

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -36,7 +36,7 @@
       ></a>
     </div>
     <div class="flex-container-social-item">
-      <a href="https://github.com/brnomz/my-digital-cv"
+      <a href="https://www.facebook.com/bruno.omizu/"
         ><i class="pi pi-facebook" style="font-size: 24px; color: black"></i
       ></a>
     </div>
