added skills section + refactoring other components

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -57,10 +57,11 @@
     <div class="intro-hello"><span>Hello, I'm Bruno</span></div>
     <p>
       I am a Solutions Architect with over 15 years of experience with Software
-      Engineering, Cloud and DevOps. I have built this CV webpage using Angular
-      14 with a few components from PrimeNg to test and improve my front-end
-      skills. You can find the full code for this website on my GitHub
-      repository.
+      Engineering, Cloud and DevOps. I have built this CV webpage using
+      <a href="https://angular.io/">Angular</a> and
+      <a href="https://www.primefaces.org/primeng/">PrimeNg</a> components as a
+      experiment to improve my front-end skills. You can find the full code for
+      this website on my GitHub repository.
     </p>
   </div>
 </div>
