--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,5 +1,5 @@
 <div id="education" class="flex-container-header">
-  <i class="pi pi-book" style="font-size: 24px; color: black"></i>
+  <i class="pi pi-book" style="font-size: 24px"></i>
   <h3>EDUCATION</h3>
 </div>
 
