--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,4 +1,5 @@
 <div id="experience" class="flex-container-header">
+  <i class="pi pi-briefcase" style="font-size: 24px"></i>
   <h3>EXPERIENCE</h3>
 </div>
 
