added transitions on main page + fix footer

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="spacing">
   <div class="footer">
-    <p>Created by Bruno Omizu - 2022</p>
+    <p class="p-footer">Created by Bruno Omizu - 2022</p>
   </div>
 </div>
