--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -32,22 +32,22 @@
   <div class="flex-container-social-box">
     <div class="flex-container-social-item">
       <a href="https://www.linkedin.com/in/brunomizu/"
-        ><i class="pi pi-linkedin" style="font-size: 24px; color: black"></i
+        ><i class="pi pi-linkedin" style="font-size: 24px"></i
       ></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://www.facebook.com/bruno.omizu/"
-        ><i class="pi pi-facebook" style="font-size: 24px; color: black"></i
+        ><i class="pi pi-facebook" style="font-size: 24px"></i
       ></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://github.com/brnomz/my-digital-cv"
-        ><i class="pi pi-github" style="font-size: 24px; color: black"></i
+        ><i class="pi pi-github" style="font-size: 24px"></i
       ></a>
     </div>
     <div class="flex-container-social-item">
       <a href="https://www.instagram.com/brunomizu/"
-        ><i class="pi pi-instagram" style="font-size: 24px; color: black"></i
+        ><i class="pi pi-instagram" style="font-size: 24px"></i
       ></a>
     </div>
   </div>
