--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,7 @@ body .p-component {
   display: flex;
   flex-direction: row;
   line-height: 100px;
-  background-color: #1a5276;
+  background-color: #85929e;
   height: 100px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -31,7 +31,7 @@ body .p-component {
 }
 
 .flex-container-header h3 {
-  background-color: #1a5276;
+  background-color: #85929e;
   color: #eaecee;
   height: 100px;
   margin: 10px;
