--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,6 +4,14 @@
   overflow: hidden;
   position: sticky;
   text-align: center;
+  justify-content: center;
+  vertical-align: middle;
   color: white;
   font-size: 12px;
+  height: 50px;
+}
+
+.p-footer {
+  margin: 0px;
+  line-height: 50px;
 }
