--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -77,7 +77,7 @@ img {
   flex-wrap: wrap;
   width: 100%;
   height: auto;
-  background-color: grey;
+  background-color: #85929e;
   margin: 1px;
   margin-left: auto;
   margin-right: auto;
