--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -57,11 +57,23 @@
     <div class="intro-hello"><span>Hello, I'm Bruno</span></div>
     <p>
       I am a Solutions Architect with over 15 years of experience with Software
-      Engineering, Cloud and DevOps. I have built this CV webpage using
-      <a href="https://angular.io/">Angular</a> and
+      Engineering, Integration, Cloud and DevOps. My passion is to work with
+      technology and understand how it works and what we can do with it.
+    </p>
+
+    <p>
+      As part of my learning journey, I have built this CV webpage using
+      <a href="https://angular.io/">Angular 14</a> and
       <a href="https://www.primefaces.org/primeng/">PrimeNg</a> components as a
       experiment to improve my front-end skills. You can find the full code for
-      this website on my GitHub repository.
+      this website on my GitHub repository (link above). I hope you find the
+      information required to get me a good job in your company :)
+    </p>
+
+    <p>
+      I have a preference for permanent roles and remote (or hybrid / twice a
+      week in the office is fine too). I can also provide references, you just
+      have to request it
     </p>
   </div>
 </div>
