changed font + css tweaks

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -3,6 +3,8 @@
   <h3>EDUCATION</h3>
 </div>
 
+<div class="spacing"></div>
+
 <div class="flex-container-education-box">
   <p-card
     header="Santa Cecilia University"
