--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -34,7 +34,7 @@ img {
   margin-right: auto;
   height: 350px;
   width: 348px;
-  background-color: white;
+  background-color: #ebedef;
   font-size: 14px;
   padding-left: 15px;
   border: 1px solid lightgrey;
