--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -1,8 +1,11 @@
-.flex-container-experience-box {
+.flex-container-education-box {
+  padding-top: 30px;
+  padding-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  background-color: #ebedef;
 }
