--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,5 +1,8 @@
 .flex-container-experience-box {
+  padding-top: 30px;
+  padding-bottom: 30px;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 150px;
+  padding-right: 150px;
+  background-color: #ebedef;
 }
