--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,14 +1,18 @@
 .flex-container-skills-box {
-  margin-left: 400px;
-  margin-right: 400px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  background-color: #ebedef;
+  padding-left: 250px;
+  padding-right: 250px;
   align-items: center;
   justify-content: center;
 }
 
 p-card {
-  width: 300px;
-  margin: 10px;
+  width: 250px;
+  margin: 15px;
 }
