--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "average";
-  src: url("fonts/AverageSans-Regular.ttf") format("truetype");
+  src: url("fonts/OpenSans-Regular.ttf") format("truetype");
   font-weight: bold;
 }
 
@@ -25,8 +25,6 @@ body .p-component {
   line-height: 100px;
   background-color: #85929e;
   height: 100px;
-  margin-top: 20px;
-  margin-bottom: 20px;
   scroll-margin: 52px;
 }
 
@@ -34,11 +32,10 @@ body .p-component {
   background-color: #85929e;
   color: #eaecee;
   height: 100px;
-  margin: 10px;
 }
 
 .spacing {
-  margin-top: 50px;
+  background-color: #ebedef;
 }
 
 i {
