fix flex header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,10 @@
       ><i class="pi pi-home" style="font-size: 24px; color: white"></i
     ></a>
   </div>
-  <a href="#contact">Contact</a>
-  <a href="#skills">Skills</a>
-  <a href="#education" (click)="scroll('education')">Education</a>
-  <a href="#experience" (click)="scroll('experience')">Experience</a>
+  <div class="menu">
+    <a href="#contact">Contact</a>
+    <a href="#skills">Skills</a>
+    <a href="#education">Education</a>
+    <a href="#experience">Experience</a>
+  </div>
 </div>
