--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,11 +1,14 @@
 /* Add a black background color to the top navigation */
 .topnav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   background-color: #333;
   overflow: hidden;
   position: sticky;
   top: 0;
   z-index: 100;
-  height: 50px;
+  height: auto;
 }
 
 /* Style the links inside the navigation bar */
@@ -13,7 +16,9 @@
   float: right;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  line-height: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
   text-decoration: none;
   font-size: 17px;
   transition: 0.4s;
@@ -34,10 +39,13 @@
 /* Add a color to the active/current link */
 .home {
   background-color: #04aa6d;
-  float: left;
+}
+
+.menu {
+  margin-left: auto;
 }
 
 .scroll-with-offset {
   padding-top: 100px;
-  margin-bottom: -100px;
+  margin-bottom: -300px;
 }
