--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -66,8 +66,7 @@
 
     <p>
       I have a preference for permanent roles and remote (or hybrid / twice a
-      week in the office is fine too). I can also provide references, you just
-      have to request it
+      week in the office is fine too). I can also provide references on request.
     </p>
   </div>
 </div>
