changed personal details

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -9,11 +9,11 @@
     <div class="details-contact">
       <div>
         <h4><strong>Phone</strong></h4>
-        <p>000 222 8877</p>
+        <p>+64 27 207 5939</p>
       </div>
       <div>
         <h4><strong>Email</strong></h4>
-        <p>test@test.com</p>
+        <p>y.omizu@gmail.com</p>
       </div>
       <div>
         <h4><strong>Date of Birth</strong></h4>
