--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container-main">
-  <div class="image"><img src="assets/images/bruno.jpg" alt="" /></div>
+  <div class="image"><img src="assets/images/bruno.jpeg" alt="" /></div>
   <div class="details">
     <div class="details-header">
       <h1>Bruno Omizu</h1>
@@ -7,14 +7,6 @@
       <p>New Zealand Permanent Resident</p>
     </div>
     <div class="details-contact">
-      <div>
-        <h4><strong>Phone</strong></h4>
-        <p>+64 27 207 5939</p>
-      </div>
-      <div>
-        <h4><strong>Email</strong></h4>
-        <p>y.omizu@gmail.com</p>
-      </div>
       <div>
         <h4><strong>Date of Birth</strong></h4>
         <p>November 12th, 1985</p>
@@ -48,25 +40,26 @@
 </div>
 <div class="flex-container-intro">
   <div class="flex-container-intro-box">
-    <div class="intro-hello"><span>Hello, I'm Bruno</span></div>
+    <div class="intro-hello"><span>HELLO, I AM BRUNO.</span></div>
     <p>
-      I am a Solutions Architect with over 15 years of experience with Software
-      Engineering, Integration, Cloud and DevOps. My passion is to work with
-      technology and understand how it works and what we can do with it.
+      I am a Solutions Architect with over 15 years of experience in Software
+      Engineering, Integration, Cloud, and DevOps. My passion is to work with
+      technology, understanding how it functions and what possibilities it
+      offers.
     </p>
 
     <p>
-      As part of my learning journey, I have built this CV webpage using
-      <a href="https://angular.io/">Angular 14</a> and
-      <a href="https://www.primefaces.org/primeng/">PrimeNg</a> components as a
-      experiment to improve my front-end skills. You can find the full code for
-      this website on my GitHub repository (link above). I hope you find the
-      information required to get me a good job in your company :)
+      As a part of my ongoing learning journey, I have built this CV webpage
+      using Angular and PrimeNg components as an experiment to enhance my
+      front-end skills. You can find the complete code for this website on my
+      GitHub repository (link provided above). I hope you discover the necessary
+      information to consider me for a suitable position.
     </p>
 
     <p>
-      I have a preference for permanent roles and remote (or hybrid / twice a
-      week in the office is fine too). I can also provide references on request.
+      I have a preference for permanent roles, whether remote or hybrid (being
+      in the office twice a week is also acceptable). I am also able to provide
+      references upon request.
     </p>
   </div>
 </div>
