--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "average";
-  src: url("fonts/OpenSans-Regular.ttf") format("truetype");
+  src: url("fonts/UbuntuMono-Regular.ttf") format("truetype");
   font-weight: bold;
 }
 
